--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "peity": "^3.2.1",
     "rxjs": "^5.1.0",
     "@angular/cli": "^1.0.0",
-    "@angular/compiler-cli": "^2.4.0",
+    "@angular/compiler-cli": "^4.0.0",
     "@types/jasmine": "2.5.38",
     "@types/node": "~6.0.60",
     "zone.js": "^0.8.4",
@@ -58,7 +58,6 @@
   },
   "engines": {
     "node": "~8.10.0",
-    "npm": "~6.0.0",
-    "node-sass": "^4.7.2"
+    "npm": "~6.0.0"
   }
 }
