--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@angular/animations": "^4.0.1",
     "@angular/common": "^4.0.1",
     "@angular/compiler": "^4.0.1",
-    "@angular/compiler-cli": "^4.0.1",
+    "@angular/compiler-cli": "^4.0.0",
     "@angular/core": "^4.0.1",
     "@angular/forms": "^4.0.1",
     "@angular/http": "^4.0.1",
@@ -37,7 +37,9 @@
     "peity": "^3.2.1",
     "rxjs": "^5.1.0",
     "@angular/cli": "^1.0.0",
-    "@angular/compiler-cli": "^4.0.0",
+    "ejs": "~2.4.1",
+    "body-parser": "~1.14.2",
+    "express-session": "~1.13.0",
     "@types/jasmine": "2.5.38",
     "@types/node": "~6.0.60",
     "zone.js": "^0.8.4",
